<resources>
    <string name="app_name">Story App</string>
    <string name="name_app">Selamat Datang di Story App</string>
    <string name="descApp">Aplikasi untuk menyimpan semua Momen Penting keseharianmu dan jadikan itu momen berharga bagimu!!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tv_h_login">Catat Story Anda</string>
    <string name="tv_ket_login">Masukan email dan password anda terlebih dahulu sebelum anda mengabadikan momen anda</string>
    <string name="tv_h_regist">Mari Bergabung di Story App</string>
    <string name="tv_ket_regist">Daftarkan nama, email dan password anda terlebih dahulu sebelum anda mengabadikan momen anda</string>
    <string name="tv_nama">Nama</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="error">tethjdhaknd</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Coba Lagi</string>
</resources>